small changes and correction

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,150 @@
-.tmux/.tmux/.tmux.conf
+# https://github.com/gpakosz/.tmux
+# (‑●‑●)> dual licensed under the WTFPL v2 license and the MIT license,
+#         without any warranty.
+#         Copyright 2012— Gregory Pakosz (@gpakosz).
+########################################
+set-option -g history-limit 10000
+set-option -s escape-time 0
+set-option -g display-time 2000
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 90
+set-option -g status-right-length 40
+set -g default-terminal "xterm-256color"
+#source "/home/sedundnes/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
+#set-window-option -g window-status-current-format #"fg=colour235, bg=colour27][#fg=colour255, bg=colour27][ #I ⮁ #W #fg=colour27, bg=colour235][⮀""]]]"
+########################################
+
+# -- navigation ----------------------------------------------------------------
+
+# if you're running tmux within iTerm2
+#   - and tmux is 1.9 or 1.9a
+#   - and iTerm2 is configured to let option key act as +Esc
+#   - and iTerm2 is configured to send [1;9A -> [1;9D for option + arrow keys
+# then uncomment the following line to make Meta + arrow keys mapping work
+#set -ga terminal-overrides "*:kUP3=\e[1;9A,*:kDN3=\e[1;9B,*:kRIT3=\e[1;9C,*:kLFT3=\e[1;9D"
+# Task manager
+set -g @tasks_manager 'taskwarrior'
+
+# Colors
+set -g @tasks_format_begin '#[fg=white,bg=colour236]'
+set -g @tasks_format_end '#[fg=white,bg=colour236]'
+
+# Icons
+set -g @tasks_icon_urgent '⧗ '
+set -g @tasks_icon_outstanding '+ '
+
+# Status bar ------------------------------------------------------------- 
+# set-option -g status on
+set-option -g set-titles on
+set -g status-interval 1
+set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION DISPLAY"
+
+set -g status-position bottom
+set -g status-bg colour237
+set -g status-fg colour137
+set -g status-left '#[fg=colour197]#(~/bin/internet_info.sh) '
+set -g status-right '#[fg=colour81]♪ #(~/bin/now_playing.sh) #(~/bin/battery.sh) #[fg=colour255,bg=colour241,bold] %a %m-%d #[fg=colour255,bg=colour241,bold] %H:%M:%S #[fg=colour165]#[bg=default] #H '
+set -g status-right-length 100
+set -g status-left-length 70
+
+set-window-option -g aggressive-resize
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour170]#F '
+
+set-option -g set-titles-string '#S | #W'
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour170]#F '
+
+
+# -- windows & pane creation ---------------------------------------------------
+
+# new window retains current path, possible values are:
+#   - true
+#   - false (default)
+tmux_conf_new_window_retain_current_path=false
+
+# new pane retains current path, possible values are:
+#   - true (default)
+#   - false
+tmux_conf_new_pane_retain_current_path=true
+
+# new pane tries to reconnect ssh sessions (experimental), possible values are:
+#   - true
+#   - false (default)
+tmux_conf_new_pane_reconnect_ssh=false
+
+# prompt for session name when creating a new session, possible values are:
+#   - true
+#   - false (default)
+tmux_conf_new_session_prompt=false
+set-option -g default-shell /bin/zsh
+
+# -- display -------------------------------------------------------------------
+
+# RGB 24-bit colour support (tmux >= 2.2), possible values are:
+#  - true
+#  - false (default)
+tmux_conf_theme_24b_colour=true
+
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+# don't rename windows automatically
+
+set-option -g allow-rename off
+
+
+# in copy mode, copying selection also copies to the OS clipboard
+#   - true
+#   - false (default)
+# on macOS, this requires installing reattach-to-user-namespace, see README.md
+# on Linux, this requires xsel or xclip
+tmux_conf_copy_to_os_clipboard=true
+
+
+# -- user customizations -------------------------------------------------------
+# this is the place to override or undo settings
+
+# increase history size
+#set -g history-limit 10000
+
+# start with mouse mode enabled
+#set -g mouse-select-pane on
+#set -g mouse on
+
+# force Vi mode
+# really you should export VISUAL or EDITOR environment variable, see manual
+set -g status-keys vi
+set -g mode-keys vi
+
+# replace C-b by C-a instead of using both prefixes
+# set -gu prefix2
+# unbind C-a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# move status line to top
+#set -g status-position top
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
