--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,23 +15,20 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 17;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'kitty'",
-  #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'Thunderbird'",
+  "class_g = 'Rofi'"
 ];
 round-borders = 1;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
+   "class_g = 'Rofi'"
 ];
 
 #################################
@@ -206,11 +203,12 @@ focus-exclude = [
 opacity-rule = [
   "80:class_g     = 'Bar'",             # lemonbar
   "100:class_g    = 'slop'",            # maim
-  "100:class_g    = 'XTerm'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
+  "80:class_g    = 'XTerm'",
+  "80:class_g    = 'URxvt'",
+  "80:class_g    = 'kitty'",
   "80:class_g    = 'Alacritty'",
   "80:class_g     = 'Polybar'",
+  "80:class_g     = 'Caja'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
@@ -259,10 +257,10 @@ opacity-rule = [
 blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
-  #method = "kernel";
+#method = "kernel";
   strength = 7;
   # deviation = 1.0;
-  # kernel = "11x11gaussian";
+#kernel = "11x11gaussian";
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -288,19 +286,19 @@ blur-background-exclude = [
 #################################
 
 # Daemonize process. Fork to background after initialization. Causes issues with certain (badly-written) drivers.
-# daemon = false
+daemon = true 
 
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
 experimental-backends = true;
-#backend = "glx";
-#backend = "xrender";
 backend = "glx";
+#backend = "xrender";
+#backend = "glx";
 
 
 # Enable/disable VSync.
-# vsync = false
+#vsync = false
 vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -332,7 +330,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 60
+refresh-rate = 60.06
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
 #   vsync drm/opengl/opengl-oml
@@ -345,13 +343,13 @@ refresh-rate = 60
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy, 
 # provided that the WM supports it.
 #
-# use-ewmh-active-win = false
+use-ewmh-active-win = true
 
 # Unredirect all windows if a full-screen opaque window is detected, 
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows. paint-on-overlay may make the flickering less obvious.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
