--- a/alacritty.yml
+++ b/alacritty.yml
@@ -25,19 +25,19 @@ scrolling:
 
 font:
   normal:
-    family: Hack
+    family: Roboto Mono for Powerline
     style: Regular
 
   bold:
-    family: Hack
+    family: Roboto Mono for Powerline
     style: Bold
 
   italic:
-    family: Hack
+    family: cooljazz
     style: Italic
 
   bold_italic:
-    family: Hack
+    family: cooljazz
     style: Bold Italic
 
   size: 13.5 
@@ -52,38 +52,37 @@ font:
 
 draw_bold_text_with_bright_colors: true
 
-# Oxide colors
+# Colors (Gruvbox dark)
 colors:
+  # Default colors
   primary:
-    background: '#212121'
-    foreground: '#c0c5ce'
-    bright_foreground: '#f3f4f5'
+    # hard contrast: background = '0x1d2021'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
-  cursor:
-    text: '#212121'
-    cursor: '#c0c5ce'
-
+  # Normal colors
   normal:
-    black:   '#212121'
-    red:     '#e57373'
-    green:   '#a6bc69'
-    yellow:  '#fac863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#c0c5ce'
-
+    black:   '0x282828'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0xa89984'
+  # Bright colors
   bright:
-    black:   '#5c5c5c'
-    red:     '#e57373'
-    green:   '#a6bc69'
-    yellow:  '#fac863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#f3f4f5'
+    black:   '0x928374'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xebdbb2'  
 
-  indexed_colors: []
+indexed_colors: []
 
 bell:
   animation: EaseOutExpo
