--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -22,13 +22,13 @@ rounded-corners-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'",
-  "class_g = 'Rofi'"
+  "class_g = 'Thunderbird'"
+  #"class_g = 'Rofi'"
 ];
 round-borders = 1;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
-   "class_g = 'Rofi'"
+  #`"class_g = 'Rofi'"
 ];
 
 #################################
