--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set-option -g status-interval 2
 set-option -g status-justify "centre"
 set-option -g status-left-length 90
 set-option -g status-right-length 40
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 #source "/home/sedundnes/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 #set-window-option -g window-status-current-format #"fg=colour235, bg=colour27][#fg=colour255, bg=colour27][ #I ⮁ #W #fg=colour27, bg=colour235][⮀""]]]"
 ########################################
