--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -22,7 +22,8 @@ rounded-corners-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'Thunderbird'",
+  "class_g = 'Dunst'"
   #"class_g = 'Rofi'"
 ];
 round-borders = 1;
