--- a/.tmux.conf
+++ b/.tmux.conf
@@ -130,9 +130,15 @@ set -g mode-keys vi
 # set -gu prefix2
 unbind C-a
 #unbind C-b
-set -g prefix C-b
-bind C-b send-prefix
+# Set the control character to Ctrl+Spacebar (instead of Ctrl+B)
+set -g prefix C-space
+unbind-key C-b
+bind-key C-space send-prefix
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 # move status line to top
 #set -g status-position top
 # List of plugins
