--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set-option -g status-justify "centre"
 set-option -g status-left-length 90
 set-option -g status-right-length 40
 set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:Tc'
 #source "/home/sedundnes/.local/lib/python3.7/site-packages/powerline/bindings/tmux/powerline.conf"
 #set-window-option -g window-status-current-format #"fg=colour235, bg=colour27][#fg=colour255, bg=colour27][ #I ⮁ #W #fg=colour27, bg=colour235][⮀""]]]"
 ########################################
@@ -153,4 +154,5 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '/home/brown/.local/bin/ibeam'
 run -b '~/.tmux/plugins/tpm/tpm'
