--- a/init.toml
+++ b/init.toml
@@ -12,6 +12,7 @@
     # if you want to use more colorscheme, please load the colorscheme
     # layer
     colorscheme = "gruvbox"
+    autocomplete_method = "ycm"
     filemanager = "nerdtree"
     colorscheme_bg = "dark"
     # Disable guicolors in basic mode, many terminal do not support 24bit
@@ -19,18 +20,19 @@
     enable_guicolors = true 
     # Disable statusline separator, if you want to use other value, please
     # install nerd fonts
-    statusline_separator = "arrow"
-    statusline_iseparator = "arrow"
+    statusline_separator = "fire"
     buffer_index_type = 4
     enable_tabline_filetype_icon = true
     enable_tabline_ft_icon = true 
     enable_statusline_mode = true 
 
 # Enable autocomplete layer
+#[[layers]]
+#name = 'autocomplete'
+#auto_completion_return_key_behavior = "complete"
+#auto_completion_tab_key_behavior = "smart"
 [[layers]]
-name = 'autocomplete'
-auto_completion_return_key_behavior = "complete"
-auto_completion_tab_key_behavior = "smart"
+name = "fzf"
 [[layers]]
 name = 'shell'
 default_position = 'top'
@@ -39,10 +41,6 @@ default_height = 30
 [[layers]]
   name = 'core'
   filetree_show_hidden = true
-
-[[layers]]
-    name = 'lang#c'
-    enable_clang_syntax_highlight = true
 
 [[layers]]
   name = "lang#markdown"
@@ -54,14 +52,36 @@ default_height = 30
   name = "tmux"
 
 [[layers]]
-  name = "lang#vim"
+  name = "colorscheme"
 
 [[layers]]
-  name = "lang#sh"
+  name = "lang#vim"
 
 [[layers]]
   name = "lang#java"
 
+[[layers]]
+  name = "lsp"
+  filetypes = [
+    "java"
+  ]
+  [layers.override_cmd]
+    java = [
+    "java",
+    "-Declipse.application=org.eclipse.jdt.ls.core.id1",
+    "-Dosgi.bundles.defaultStartLevel=4",
+    "-Declipse.product=org.eclipse.jdt.ls.core.product",
+    "-Dlog.protocol=true",
+    "-Dlog.level=NONE",
+    "-noverify",
+    "-Xmx1G",
+    "-jar",
+    "/home/brown/jdt-language-server/plugins/org.eclipse.equinox.launcher_1.6.200.v20210416-2027.jar",
+    "-configuration",
+    "/home/brown/jdt-language-server/config_linux",
+    "-data",
+    "/home/brown/.cache/javalsp"
+    ]
 [[layers]]
   name = "lang#typescript"
 
@@ -70,6 +90,11 @@ default_height = 30
 
 [[layers]]
   name = "lang#javascript"
+
+[[layers]]
+  name = "lang#c"
+  [layer.clang_std]
+    cpp = "c20"
 
 [[layers]]
   name = "VersionControl"
@@ -88,8 +113,38 @@ default_height = 30
 [[layers]]
   name = "lang#latex"
 
+[[layers]]
+  name = "debug"
+
 [[custom_plugins]]
-    repo = "lilydjwg/colorizer"
-    on_cmd = ["ColorHighlight", "ColorToggle"]
-    merged = false
+  repo = "lilydjwg/colorizer"
+  on_cmd = ["ColorHighlight", "ColorToggle"]
+  merged = false
+
+[[custom_plugins]]
+  name = 'junegunn/fzf.vim'
+  merged = 0
+
+[[custom_plugins]]
+  repo = "mhartington/oceanic-next"
+    merged = 0
+
+[[custom_plugins]]
+  repo = "rafi/awesome-vim-colorschemes"
+  merged = 0
+
+[[custom_plugins]]
+  repo = "altercation/vim-colors-solarized"
+  merged = 0
+
+[[custom_plugins]]
+  repo = "lifepillar/vim-gruvbox8.git"
+  merged = 0
+[[custom_plugins]]
+  repo = "lifepillar/vim-colortemplate"
+  merged = 0
+
+[[custom_plugins]]
+  repo = "octol/vim-cpp-enhanced-highlight"
+  merged = 0
 
